--- a/index.html
+++ b/index.html
@@ -3,31 +3,22 @@
 <head>
     <link rel="preconnect" href="https://fonts.bunny.net">
     <link href="https://fonts.bunny.net/css?family=inter:300,400|poppins:300,400,500" rel="stylesheet" />
-    <title>Lewis Larsen | Personal Homepage</title></head>
+    <title>Hey! | Lewis Larsen</title></head>
 <body>
 <h1>Lewis Larsen</h1>
 <hr />
 <p>
-    Hey there, my name is Lewis and welcome to my homepage. I am an IT professional and hobbyist PHP web developer.
+    Hey there, my name is Lewis and welcome to my website. I am an IT professional and PHP web developer from the south-east of the United Kingdom.
 </p>
 
 <p>
-    I live in the south east of the United Kingdom and when I'm not programming I'm playing the guitar.
-</p>
-
-<p>
-    If you would like to get in touch with me, please send a message to <a href="mailto:lewis@larsens.dev">lewis@larsens.dev</a> and I will get back to you soon. You can also find me on various websites below.
+    If you would like to get in touch with me, please send a message to <a href="mailto:lewis@larsens.dev">lewis@larsens.dev</a> and I will get back to you soon. You can also find me on various websites listed below.
 </p>
 
 <ul>
     <li><a class="socialButton" href="https://github.com/lewislarsen" title="GitHub">
         <svg fill="currentColor" height="1792" viewBox="0 0 1792 1792" width="1792" xmlns="http://www.w3.org/2000/svg"><path d="M1664 896q0 251-146.5 451.5t-378.5 277.5q-27 5-39.5-7t-12.5-30v-211q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-121-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-86-13.5q-44 113-7 204-79 85-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-40 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 .5 89t.5 54q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/></svg>
     </a>
-    </li>
-    <li>
-        <a class="socialButton" href="https://gitlab.com/lewislarsen" title="GitLab">
-            <svg fill="currentColor" viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg"><rect fill="none" height="256" width="256"/><path d="M231.9,169.8l-94.8,65.6a15.7,15.7,0,0,1-18.2,0L24.1,169.8a16.1,16.1,0,0,1-6.4-17.3L45,50a12,12,0,0,1,22.9-1.1L88.5,104h79l20.6-55.1A12,12,0,0,1,211,50l27.3,102.5A16.1,16.1,0,0,1,231.9,169.8Z"/></svg>
-        </a>
     </li>
     <li>
         <a class="socialButton" href="https://www.linkedin.com/in/lewis-larsen-05abb9308" title="LinkedIn">
