--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script defer src="https://analytics.averylab.cloud/script.js" data-website-id="17f36182-cbf6-4d9d-964b-59dc32a6dabe"></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="af5da9db-3a66-48c5-8331-5bae1a04e39f"></script>
     <link rel="preconnect" href="https://fonts.bunny.net">
     <link href="https://fonts.bunny.net/css?family=inter:300,400|poppins:300,400,500" rel="stylesheet" />
     <title>Hey! | Lewis Larsen</title></head>
