--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lewis Larsen is an experienced IT professional and PHP developer, providing solutions to meet your needs.">
     <title>Lewis Larsen | IT Professional & PHP Developer</title>
     <script defer src="https://cloud.umami.is/script.js" data-website-id="af5da9db-3a66-48c5-8331-5bae1a04e39f"></script>
     <link rel="preconnect" href="https://fonts.bunny.net">
+    <link rel="preload" href="https://fonts.bunny.net/css?family=fira-sans:300,400,600|fira-code:400" as="style">
     <link href="https://fonts.bunny.net/css?family=fira-sans:300,400,600|fira-code:400" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Lewis Larsen",
+            "jobTitle": "Software Engineer",
+            "url": "https://larsens.dev",
+            "sameAs": [
+                "https://www.linkedin.com/in/lewis-larsen-05abb9308",
+                "https://github.com/lewislarsen"
+            ]
+        }
+    </script>
     <link id="favicon" rel="icon" href="data:," sizes="any">
     <style>
         :root {
@@ -47,6 +62,7 @@
         }
 
         .container {
+            contain: layout style;
             max-width: 800px;
             margin: 0 auto;
         }
@@ -465,7 +481,7 @@
 
                 <div class="project">
                     <div class="project-header">
-                        <img src="/projects/vanguard-thumbnail.png" alt="Vanguard Project" class="project-thumbnail">
+                        <img src="/projects/vanguard-thumbnail.png" alt="Vanguard Project" class="project-thumbnail" loading="lazy">
                         <h4 class="project-title">Vanguard</h4>
                     </div>
                     <p class="project-description">
@@ -476,7 +492,7 @@
 
                 <div class="project">
                     <div class="project-header">
-                        <img src="/projects/leagues-thumbnail.png" alt="League Tracker Project" class="project-thumbnail">
+                        <img src="/projects/leagues-thumbnail.png" alt="League Tracker Project" class="project-thumbnail" loading="lazy">
                         <h4 class="project-title">OSRS League Tracker</h4>
                     </div>
                     <p class="project-description">
@@ -487,7 +503,7 @@
 
                 <div class="project">
                     <div class="project-header">
-                        <img src="/projects/runelite-thumbnail.png" alt="RuneLite Plugin Project" class="project-thumbnail">
+                        <img src="/projects/runelite-thumbnail.png" alt="RuneLite Plugin Project" class="project-thumbnail" loading="lazy">
                         <h4 class="project-title">RuneLite Client Plugin</h4>
                     </div>
                     <p class="project-description">
