--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.bunny.net">
     <link rel="preload" href="https://fonts.bunny.net/css?family=fira-sans:300,400,600|fira-code:400" as="style">
     <link href="https://fonts.bunny.net/css?family=fira-sans:300,400,600|fira-code:400" rel="stylesheet" />
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
