--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lewis Larsen - IT Professional and PHP Developer">
-    <title>Lewis Larsen | IT Professional & PHP Developer</title>
+    <meta name="description" content="Lewis Larsen - IT Professional and Web Developer">
+    <title>Lewis Larsen | IT Professional & Web Developer</title>
 
     <!-- Analytics -->
     <script defer src="https://cloud.umami.is/script.js" data-website-id="af5da9db-3a66-48c5-8331-5bae1a04e39f"></script>
@@ -19,7 +19,7 @@
             "@context": "https://schema.org",
             "@type": "Person",
             "name": "Lewis Larsen",
-            "jobTitle": "IT Professional & PHP Developer",
+            "jobTitle": "IT Professional & Web Developer",
             "url": "https://larsens.dev",
             "sameAs": [
                 "https://github.com/lewislarsen"
@@ -235,12 +235,15 @@
     <div class="profile">
         <h1 class="name">Lewis Larsen</h1>
         <h2 class="title">IT Professional & Web Developer</h2>
+        <p class="bio">
+            UK-based fullstack developer with expertise in PHP, Laravel, and modern web technologies.
+        </p>
 
         <p class="bio">
-            Developer and IT professional based in the UK. I focus on PHP, Laravel, and system administration.        </p>
-
+            Specializing in both development and IT infrastructure, I bridge the gap between programming and systems management.
+        </p>
         <div class="tools">
-            <p class="tools-title">Things I work with</p>
+            <p class="tools-title">Things I work with:</p>
             <div class="tools-list">
                 <span>PHP</span>
                 <span>Laravel</span>
@@ -251,7 +254,7 @@
         </div>
 
         <div class="contact">
-            <p class="contact-intro">Want to get in touch? Just shoot me a message!</p>
+            <p class="contact-intro">Want to get in touch? Just email me!</p>
             <div class="contact-links">
                 <a href="mailto:lewis@larsens.dev" class="contact-link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
@@ -273,37 +276,35 @@
         <div class="project-list">
             <div class="project-item">
                 <div class="project-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
-                </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>                </div>
                 <div class="project-info">
                     <h4 class="project-name">Vanguard</h4>
-                    <p class="project-desc">Open-source backup solution for servers and applications</p>
+                    <p class="project-desc">Elegant open-source backup solution crafted for servers and web applications.</p>
                     <a href="https://vanguardbackup.com" target="_blank" rel="noopener noreferrer" class="project-link">vanguardbackup.com</a>
                 </div>
             </div>
 
             <div class="project-item">
                 <div class="project-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
-                </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>                </div>
                 <div class="project-info">
-                    <h4 class="project-name">OSRS League Tracker</h4>
-                    <p class="project-desc">Track average player count in Old School RuneScape Leagues</p>
-                    <a href="https://leagues.larsens.dev" target="_blank" rel="noopener noreferrer" class="project-link">leagues.larsens.dev</a>
+                    <h4 class="project-name">YouTube Channel Notifier</h4>
+                    <p class="project-desc">Beautifully crafted notification system that keeps you in sync with your favourite YouTube creators' latest uploads.</p>
+                    <a href="https://github.com/lewislarsen/youtube-channel-notifier" target="_blank" rel="noopener noreferrer" class="project-link">GitHub Repository</a>
                 </div>
             </div>
 
             <div class="project-item">
                 <div class="project-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
-                </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"></polygon><path d="M15.54 8.46a5 5 0 0 1 0 7.07"></path><path d="M19.07 4.93a10 10 0 0 1 0 14.14"></path></svg>                </div>
                 <div class="project-info">
-                    <h4 class="project-name">RuneLite Client Plugin</h4>
-                    <p class="project-desc">Plugin enhancing game experience with sound alerts</p>
+                    <h4 class="project-name">RuneLite Sound Alerts Plugin</h4>
+                    <p class="project-desc">Expressive plugin that delivers customizable audio triggers for Old School RuneScape.</p>
                     <a href="https://github.com/lewislarsen/sound-alerts-expanded" target="_blank" rel="noopener noreferrer" class="project-link">GitHub Repository</a>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 </body>
