--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
                 <span>PHP</span>
                 <span>Laravel</span>
                 <span>PostgreSQL</span>
+                <span>Git</span>
+                <span>Vue.js</span>
                 <span>React.js</span>
                 <span>Linux</span>
             </div>
