--- a/index.html
+++ b/index.html
@@ -3,29 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lewis Larsen - IT Professional and Web Developer">
-    <title>Lewis Larsen | IT Professional & Web Developer</title>
-
-    <!-- Analytics -->
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="af5da9db-3a66-48c5-8331-5bae1a04e39f"></script>
+    <meta name="description" content="Web Developer">
+    <title>Hey there!</title>
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.bunny.net">
     <link href="https://fonts.bunny.net/css?family=inter:400,500,600" rel="stylesheet" />
-
-    <!-- Structured data -->
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "Person",
-            "name": "Lewis Larsen",
-            "jobTitle": "IT Professional & Web Developer",
-            "url": "https://larsens.dev",
-            "sameAs": [
-                "https://github.com/lewislarsen"
-            ]
-        }
-    </script>
 
     <style>
         :root {
@@ -56,258 +39,99 @@
         }
 
         .card {
-            max-width: 800px;
+            max-width: 600px;
             width: 100%;
             background-color: var(--card-bg);
             border: 1px solid var(--border);
             border-radius: 12px;
-            padding: 2rem;
+            padding: 2.5rem;
             backdrop-filter: blur(8px);
-            display: grid;
-            grid-template-columns: 1fr 1px 1fr;
-            gap: 2rem;
+            text-align: center;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
         }
 
-        .divider {
-            width: 1px;
-            background-color: var(--border);
-        }
-
-        .profile {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .name {
-            font-size: 1.8rem;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-        }
-
         .title {
-            font-size: 1.1rem;
-            color: var(--accent);
-            margin-bottom: 1.5rem;
-            font-weight: 500;
-        }
-
-        .bio {
-            color: var(--text-secondary);
-            margin-bottom: 1.5rem;
-            font-size: 0.95rem;
-        }
-
-        .tools {
-            margin-bottom: 1.5rem;
-        }
-
-        .tools-title {
-            font-size: 0.9rem;
-            margin-bottom: 0.5rem;
-            color: var(--text-secondary);
-        }
-
-        .tools-list {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1rem;
-            font-size: 0.9rem;
-        }
-
-        .tools-list span {
-            color: var(--accent);
-        }
-
-        .contact {
-            margin-top: auto;
-        }
-
-        .contact-intro {
-            font-size: 0.9rem;
-            margin-bottom: 0.75rem;
-            color: var(--text-secondary);
-        }
-
-        .contact-links {
-            display: flex;
-            gap: 1rem;
-        }
-
-        .contact-link {
-            color: var(--text-secondary);
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            font-size: 0.9rem;
-            transition: color 0.2s ease;
-        }
-
-        .contact-link:hover {
-            color: var(--accent);
-        }
-
-        .projects {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .section-title {
-            font-size: 1.1rem;
+            font-size: 1.5rem;
             font-weight: 600;
+            margin-bottom: 1rem;
+            color: var(--accent);
+        }
+
+        .message {
+            font-size: 1.1rem;
             margin-bottom: 1.5rem;
             color: var(--text-primary);
         }
 
-        .project-list {
+        .skills {
             display: flex;
-            flex-direction: column;
-            gap: 1.25rem;
-        }
-
-        .project-item {
-            display: flex;
-            gap: 1rem;
-        }
-
-        .project-icon {
-            width: 2.5rem;
-            height: 2.5rem;
-            background-color: rgba(96, 165, 250, 0.1);
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
+            flex-wrap: wrap;
             justify-content: center;
-            flex-shrink: 0;
+            gap: 0.6rem;
+            margin-bottom: 1.5rem;
         }
 
-        .project-icon svg {
-            width: 1.25rem;
-            height: 1.25rem;
+        .skill-tag {
+            background-color: rgba(96, 165, 250, 0.1);
+            border: 1px solid rgba(96, 165, 250, 0.2);
             color: var(--accent);
+            padding: 0.3rem 0.8rem;
+            border-radius: 20px;
+            font-size: 0.9rem;
         }
 
-        .project-info {
-            display: flex;
-            flex-direction: column;
-            gap: 0.25rem;
-        }
-
-        .project-name {
-            font-weight: 500;
-            font-size: 1rem;
-        }
-
-        .project-desc {
-            font-size: 0.85rem;
-            color: var(--text-secondary);
-        }
-
-        .project-link {
-            font-size: 0.85rem;
+        .contact-link {
             color: var(--accent);
             text-decoration: none;
-            margin-top: 0.25rem;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            font-size: 1.1rem;
+            padding: 0.5rem 1rem;
+            border: 1px solid var(--accent);
+            border-radius: 6px;
+            transition: all 0.2s ease;
+            margin-top: 0.5rem;
         }
 
-        .project-link:hover {
-            text-decoration: underline;
+        .contact-link:hover {
+            background-color: rgba(96, 165, 250, 0.1);
+            color: var(--text-primary);
         }
 
-        /* Media Queries */
-        @media (max-width: 768px) {
-            .card {
-                grid-template-columns: 1fr;
-                padding: 1.5rem;
-            }
-
-            .divider {
-                height: 1px;
-                width: 100%;
-                margin: 1rem 0;
-            }
+        .separator {
+            width: 50px;
+            height: 3px;
+            background-color: var(--accent);
+            margin: 1.5rem auto;
+            opacity: 0.6;
+            border-radius: 3px;
         }
     </style>
 </head>
 <body>
 <div class="card">
-    <div class="profile">
-        <h1 class="name">Lewis Larsen</h1>
-        <h2 class="title">IT Professional & Web Developer</h2>
-        <p class="bio">
-            UK-based fullstack developer with expertise in PHP, Laravel, and modern web technologies.
-        </p>
+    <h1 class="title">Web Developer & IT Professional</h1>
 
-        <p class="bio">
-            Specializing in both development and IT infrastructure, I bridge the gap between programming and systems management.
-        </p>
-        <div class="tools">
-            <p class="tools-title">Things I work with:</p>
-            <div class="tools-list">
-                <span>PHP</span>
-                <span>Laravel</span>
-                <span>PostgreSQL</span>
-                <span>Git</span>
-                <span>Vue.js</span>
-                <span>React.js</span>
-                <span>Linux</span>
-            </div>
-        </div>
+    <div class="separator"></div>
 
-        <div class="contact">
-            <p class="contact-intro">Want to get in touch? Just email me!</p>
-            <div class="contact-links">
-                <a href="mailto:lewis@larsens.dev" class="contact-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-                    lewis@larsens.dev
-                </a>
-                <a href="https://github.com/lewislarsen" target="_blank" rel="noopener noreferrer" class="contact-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
-                    GitHub
-                </a>
-            </div>
-        </div>
+    <p class="message">Hi, you've reached my website! I'm a fullstack developer specializing in PHP, Laravel, and modern web technologies.</p>
+
+    <div class="skills">
+        <span class="skill-tag">PHP</span>
+        <span class="skill-tag">Laravel</span>
+        <span class="skill-tag">PostgreSQL</span>
+        <span class="skill-tag">React</span>
+        <span class="skill-tag">Linux</span>
+        <span class="skill-tag">Git</span>
     </div>
 
-    <div class="divider"></div>
+    <p class="message">Want to get in touch about a project?</p>
 
-    <div class="projects">
-        <h3 class="section-title">Featured Projects</h3>
-
-        <div class="project-list">
-            <div class="project-item">
-                <div class="project-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>                </div>
-                <div class="project-info">
-                    <h4 class="project-name">Vanguard</h4>
-                    <p class="project-desc">Elegant open-source backup solution crafted for servers and web applications.</p>
-                    <a href="https://vanguardbackup.com" target="_blank" rel="noopener noreferrer" class="project-link">vanguardbackup.com</a>
-                </div>
-            </div>
-
-            <div class="project-item">
-                <div class="project-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>                </div>
-                <div class="project-info">
-                    <h4 class="project-name">YouTube Channel Notifier</h4>
-                    <p class="project-desc">Beautifully crafted notification system that keeps you in sync with your favourite YouTube creators' latest uploads.</p>
-                    <a href="https://github.com/lewislarsen/youtube-channel-notifier" target="_blank" rel="noopener noreferrer" class="project-link">GitHub Repository</a>
-                </div>
-            </div>
-
-            <div class="project-item">
-                <div class="project-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"></polygon><path d="M15.54 8.46a5 5 0 0 1 0 7.07"></path><path d="M19.07 4.93a10 10 0 0 1 0 14.14"></path></svg>                </div>
-                <div class="project-info">
-                    <h4 class="project-name">RuneLite Sound Alerts Plugin</h4>
-                    <p class="project-desc">Expressive plugin that delivers customizable audio triggers for Old School RuneScape.</p>
-                    <a href="https://github.com/lewislarsen/sound-alerts-expanded" target="_blank" rel="noopener noreferrer" class="project-link">GitHub Repository</a>
-                </div>
-            </div>
-        </div>
-
-    </div>
+    <a href="mailto:contact@larsens.dev" class="contact-link">
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+        contact@larsens.dev
+    </a>
 </div>
 </body>
 </html>
